--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ body {
 
 .gallery__img {
   position: relative;
-  
+
   margin-top: auto;
 }
 
@@ -342,4 +342,208 @@ body {
 .tw-comments__bullet--current {
   border: solid 1px #a9afb3;
   background-color: #a9afb3;
+}
+
+.pop-goods {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 734px;
+
+  background-color: #232b32;
+}
+
+.pop-goods__items {
+  display: flex;
+  margin-bottom: 75px;
+}
+
+.pop-goods__wrap--row {
+  display: flex;
+  flex-direction: column;
+  height: 534px;
+  padding: 0;
+  margin: 0;
+}
+
+.pop-goods__wrap--cell {
+  position: relative;
+
+  display: flex;
+  flex-wrap: nowrap;
+  padding: 0;
+  margin: 0;
+}
+
+.pop-goods__link {
+  position: relative;
+}
+
+.pop-goods__link:hover::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+
+  width: 100%;
+  height: 100%;
+  content: "";
+
+  background-color: rgba(100, 194, 158, 0.8);
+  background-image: url('../img/shop-now.png');
+  background-repeat: no-repeat;
+  background-size: 98px 54px;
+  background-position: center;
+}
+
+.pop-goods__img {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
+.pop-goods__link--main {
+  display: block;
+  width: 300px;
+  height: 50px;
+
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 2.8px;
+  line-height: 50px;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+
+  border: solid 1px rgba(255, 255, 255, 0.5);
+}
+
+.pop-goods__link--main:hover {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.subscribe {
+  padding: 110px 0;
+}
+
+.subscribe__img--logo {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+
+.subscribe__heading {
+  font-size: 24px;
+  font-style: italic;
+  line-height: 1.42;
+  text-align: center;
+  color: #848789;
+}
+
+.subscribe__form {
+  display: flex;
+  justify-content: center;
+}
+
+.subscribe__input {
+  width: 400px;
+  height: 69px;
+  padding-right: 28px;
+  padding-left: 28px;
+  margin-right: 8px;
+
+  font-style: italic;
+  line-height: 1.2;
+  color: #848789;
+
+  border: solid 1px #d3d7d9;
+}
+
+.subscribe__input::placeholder {
+  color: #929292;
+}
+
+.subscribe__input:-ms-input-placeholder {
+  color: #929292;
+}
+
+.subscribe__btn {
+  width: 126px;
+  height: 69px;
+
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 1;
+  text-transform: uppercase;
+  color: #ffffff;
+
+  background-color: #64c29e;
+  border: none;
+  cursor: pointer;
+}
+
+.footer {
+  height: 250px;
+  padding-top: 95px;
+
+  background-color: #f7f7f7;
+}
+
+.footer__address {
+  margin-right: 246px;
+
+  font-size: 14px;
+  font-style: italic;
+  line-height: 1.29;
+  color: #848789;
+}
+
+.footer__city {
+  font-size: 16px;
+  font-weight: bold;
+  font-style: normal;
+}
+
+.footer__wrapper {
+  display: flex;
+  padding-left: 250px;
+}
+
+.footer__list {
+  display: flex;
+  padding: 0;
+
+  list-style: none;
+}
+
+.footer__item {
+  width: 35px;
+  height: 34px;
+  margin-right: 15px;
+
+  background-size: 35px 34px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.footer__item:last-child {
+  margin-right: 0;
+}
+
+.footer__item--tw {
+  background-image: url('../img/tw.png');
+}
+
+.footer__item--fb {
+  background-image: url('../img/fb.png');
+}
+
+.footer__item--pr {
+  background-image: url('../img/pr.png');
+}
+
+.footer__link {
+  display: block;
+  width: 35px;
+  height: 34px;
 }
